Pushing all files

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Kesalahan Livechat ({{ current_sheet if current_sheet else 'Live' }})</title>
+    <script src="/_vercel/insights/script.js" defer></script>
+    <script src="/_vercel/speed-insights/script.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KV2KNVBYGD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-KV2KNVBYGD');
+    </script>
     <style>
         /* SCROLLBAR STYLES */
         .sidebar::-webkit-scrollbar {
