--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -114,7 +114,7 @@
 
                 {# JUDUL DAN TOTAL KESALAHAN SITUS BARU #}
                 <div class="flex justify-between items-center px-6 pt-4 mb-4">
-                    <h2 class="text-2xl font-semibold text-gray-800">Ringkasan Total Kesalahan per Situs</h2>
+                    <h2 class="text-2xl font-semibold text-gray-800">Total Kesalahan per Situs</h2>
                     {% if grand_total %}
                     <div class="text-lg font-bold text-red-600 bg-red-100 px-3 py-1 rounded-full shadow-md">
                         GRAND TOTAL: {{ grand_total | format_number }}
@@ -164,7 +164,7 @@
 
                 {# JUDUL DAN TOTAL KESALAHAN STAFF BARU #}
                 <div class="flex justify-between items-center px-6 pt-4 mb-4">
-                    <h2 class="text-2xl font-semibold text-gray-800">Ringkasan Total Kesalahan per Staff</h2>
+                    <h2 class="text-2xl font-semibold text-gray-800">Total Kesalahan per Staff</h2>
                     {% if staff_grand_total %}
                     <div class="text-lg font-bold text-red-600 bg-red-100 px-3 py-1 rounded-full shadow-md">
                         GRAND TOTAL: {{ staff_grand_total | format_number }}
@@ -210,7 +210,7 @@
 
                 {# JUDUL DAN TOTAL KESALAHAN LEADER BARU #}
                 <div class="flex justify-between items-center px-6 pt-4 mb-4">
-                    <h2 class="text-2xl font-semibold text-gray-800">Ringkasan Total Kesalahan per Leader</h2>
+                    <h2 class="text-2xl font-semibold text-gray-800">Total Kesalahan per Leader</h2>
                     {% if leader_grand_total %}
                     <div class="text-lg font-bold text-red-600 bg-red-100 px-3 py-1 rounded-full shadow-md">
                         GRAND TOTAL: {{ leader_grand_total | format_number }}
