Update all files

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -103,6 +103,8 @@
                 RINGKASAN TOTAL
             </a>
 
+            <div class="border-t border-gray-700 mt-2 pt-2"></div>
+
             {% for name in sheet_names %}
                 <a href="{{ url_for('show_data', sheet_name=name) }}"
                     class="block p-3 text-sm text-gray-300 rounded-lg transition duration-200 hover:bg-indigo-700 hover:text-white
