--- a/api/templates/summary_livechat.html
+++ b/api/templates/summary_livechat.html
@@ -1,4 +1,4 @@
-{# summary.html - Tidak perlu extends base.html, akan di-include #}
+{# summary_livechat.html - Tidak perlu extends base.html, akan di-include #}
 
 <div class="flex flex-wrap gap-5 mb-10 items-start">
 
