--- a/api/templates/welcome.html
+++ b/api/templates/welcome.html
@@ -14,11 +14,11 @@
     </p>
     <hr class="my-6 border-gray-200">
     <p class="text-gray-700 text-base mb-8">
-        Klik tombol di bawah untuk melihat ringkasan total kesalahan Livechat situs dan staff.
+        Klik tombol di bawah untuk melihat Ringkasan kesalahan Mistake & Livechat situs dan staff.
     </p>
     
-    <a href="{{ url_for('show_summary') }}" class="btn bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-3 px-8 rounded-lg text-xl shadow-lg transition duration-300 transform hover:scale-[1.02]">
-        Lihat Ringkasan
+    <a href="{{ url_for('show_summary_livechat') }}" class="btn bg-emerald-600 hover:bg-emerald-700 text-white font-bold py-3 px-8 rounded-lg text-xl shadow-lg transition duration-300 transform hover:scale-[1.02]">
+        Lihat Dashboard
     </a>
     
     {# FOOTER BARU DENGAN INFORMASI HAK CIPTA #}
@@ -26,7 +26,7 @@
         <p class="text-xs text-gray-500">
             © Copyright 2014 - {{ current_year }} 
             <a href="https://datalivechat.vercel.app/" class="hover:text-emerald-600 transition duration-150" target="_blank">
-                Livechat Dashboard
+                Dashboard Kesalahan
             </a>. All Rights Reserved.
         </p>
     </div>
